Interface JDK <21 compatibility